Added switch themes

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link id="theme-link" rel="stylesheet" href="%PUBLIC_URL%/themes/lara-dark-blue.css" />
+    <link id="theme-link" rel="stylesheet" href="/themes/lara-light-blue/theme.css">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
